# ChangeLog for sys-firmware/midisport-firmware
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*midisport-firmware-1.2 (20 Feb 2013)

  20 Feb 2013; Kalle Lindén <kalle@gentoo.org> +midisport-firmware-1.2.ebuild,
  +files/midisport-firmware-1.2-configure.patch,
  +files/midisport-firmware-1.2-rules.patch, +metadata.xml:
  Inital ebuild.
