@@ -1,6 +1,6 @@
 AUX midisport-firmware-1.2-configure.patch 1196 SHA256 a8db6c329538322da058853db02f3336fb1a142d748594cd6d54fcb5c03a4cd5 SHA512 611f6e605372542790a81320ab9e5f58440079a914bd3fd41c449ebd5935631d54503c03fa308b829ace7116dfa113cabc65e502c3193f8d755c4b27b55677cc WHIRLPOOL d2816366705f5b768963b55275ceb695ddcfad07cf359a8afe93a5e4b3fcec3a342578df886350ee884c3e1f046e3fcd56dde4b49c6d58108c0cec4517e578d9
 AUX midisport-firmware-1.2-rules.patch 2580 SHA256 54e43298cda021094af472a2220ed83323aee3c0e8be8e7a45711acf8280b70a SHA512 31bedabf37eabb1c1c6e1fa4b7c0e9881f1c6bfa86758c060438a2c952f310093545c4e043646fbdc08ab4e3595411668ff2d21c308cc8e0685c6ae7c38b7315 WHIRLPOOL 0132d963ff14fc87f6c5599e4f013eb1986fa07002913cb9e20222a83dc023d4f63ea096391f57ca0b34937a1602bc15a32ff4bec29894ecec8d0e13b91b074f
 DIST midisport-firmware-1.2.tar.gz 62948 SHA256 2aa82ef0bf26647fbdda4c2e9ed0033b41bd0f1b4020b87fa073e4462a048b2d SHA512 ac46b1e16dbee628d41e0c5b39730a4ee51e1f62187e5e56ed393f136937fdffa86ca84882d2627397f074ca2eb12be3a8701a5027999a0d00b84b706e227a0b WHIRLPOOL d8cfdf90d17eda43ee80727be7c32f63cfe7c755a85e28ab7085aae9ef892ecf7da2ad6b45bf7047d420dfc17c1ee91b537eb08f1f5ef8c5b167753ab6ab122e
-EBUILD midisport-firmware-1.2.ebuild 775 SHA256 f76344f2b0778571f818b5a6f9a8a271aeaa35e74414bd55af5915c8d4444dd0 SHA512 918e08b7ecba6dac465861476ea4bb164e93abb7adc23a05f0a241570a171638db20bac65194168e69625488ed0baf8a835a8cf653b467d9218f27e60f84e096 WHIRLPOOL 116c52cce4ee3d2b0ae63233cc05c670eed01e708ae92c0e2ecac00613e38240ac330dbf2a078b913e0335f2dd44c64257229d4ca417b58c9a7d3a4d760bf10b
-MISC ChangeLog 378 SHA256 d6accceaab848f9977cbcdc7523ea86109b852632ca093d9632b424a6a9bde46 SHA512 7b3abec277469eca2eac175e96c09b6e93c20c08c1edc6b0561ad29648c9b329507b004ea38d550ace04142d81aea2ced1190b063e7d259c8b746cdc7bb5d7ab WHIRLPOOL 2e3ff8a627b26ed044622a915a9e9bc9a70820ec0c92d213c5a58b4d55832ec4901aaab5aee0f9d01758d276711f999dd31b0f8f0996b8d306d52a0330275635
+EBUILD midisport-firmware-1.2.ebuild 758 SHA256 7de6fb759eff01b71756fbec74bf2bc0649dcdfc8015453fb2194452aadf03c7 SHA512 437dcfb504ffab1c8a46771be11cdd4699182513ad76ef42070c10152bbf9081da3241e0bf1f6f795f3f076acb9fb5e2a75ae36f6f6e8df222971b6e16bd4e9f WHIRLPOOL 939faf46671615540854984e422341e6f4a1925e1ae4238525f63ebdefd101e7e533ffd05e131aaf06aa844b00154717a2bfdc54e174aae0910ec694098543e3
+MISC ChangeLog 595 SHA256 6a4d6ed3a754d0222f048866a2fd7b645f7539bc1c03b5a2628b91b37a464167 SHA512 9acd0a81d737dca0a3be38eb5a5a8917ba2cac79b89bdd95fd5e544184bb41bd493bff457731e91d7a492a667de2f7816be27b650d1fb7284e1894c61ca76231 WHIRLPOOL f07f3b09540662d5bcf581e228f0edc9f384c3dc43082d2f41a301c4fee7eb43af56a56e4ae6e81c57232947367db97a68c38cc20c7ead929ce045572e4729d2
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
