@@ -1,6 +1,12 @@
 # ChangeLog for sys-firmware/midisport-firmware
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Sep 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  midisport-firmware-1.2.ebuild:
+  Depend on virtual/udev instead of sys-fs/udev.
+  Set AUTOTOOLS_AUTORECONF before inherit.
+  Small styling chanhges.
 
 *midisport-firmware-1.2 (20 Feb 2013)
 
